src/test/data/tests/pragma/invalid/not_string.c
#pragma data 0x00 Hello

int main(void) {
    return 0;
}
